--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <!-- title of Website -->
     <title>MEME Page</title>
   </head>
 
